--- a/mobile/ios/Podfile
+++ b/mobile/ios/Podfile
@@ -9,4 +9,8 @@ target 'mobile' do
   # Pods for mobile
   pod 'SwiftGRPC', :git => 'https://github.com/trackforce/grpc-swift', :tag => '0.5.0'
 
+  pod 'react-native-config', :path => '../node_modules/react-native-config'
+
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
 end
