--- a/mobile/package.json
+++ b/mobile/package.json
@@ -66,7 +66,7 @@
     "globals": {
       "NODE_ENV": "test",
       "ts-jest": {
-        "useBabelrc": true
+        "babelConfig": true
       }
     }
   }
